# gptadmin_opensource

./: .gitignore  .gitmodules  .gittranslate  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  GPTADMIN_INSTRUCTIONS.md  LICENSE  MCP_SERVERS.md  Makefile  README.md  SECURITY.md  TUNNELS.md  ai_plugin.json  audit_imports.py  build.sh  cli.py  conftest.py  generate_license.py  gptadmin.py  gptadmin_build_info.py  gptadmin_hub.py  hub_proxy.py  hub_proxy.service  install.sh  install_client.sh  install_hub_and_client.sh  install_proxy.py  install_rootd.sh  install_win.ps1  install_with_ngrok.sh  interactive.py  license.json  mcp-add  old_prompt.txt  openapi.json  package-lock.json  (+16 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-07-12T03-36-06-204Z.yml  page-2026-07-12T03-36-21-088Z.yml  page-2026-07-12T03-36-37-111Z.yml  page-2026-07-12T03-37-18-950Z.yml  page-2026-07-12T03-53-18-485Z.yml  page-2026-07-12T03-54-07-858Z.yml  page-2026-07-12T04-18-44-524Z.yml  page-2026-07-12T04-18-51-032Z.yml  page-2026-07-12T12-55-52-704Z.yml  page-2026-07-12T18-48-35-297Z.yml  page-2026-07-12T18-48-43-772Z.yml  page-2026-07-12T22-31-51-939Z.yml  page-2026-07-12T22-35-59-566Z.yml  page-2026-07-12T22-38-57-493Z.yml  page-2026-07-12T22-45-47-027Z.yml  page-2026-07-12T22-46-46-692Z.yml  page-2026-07-12T22-50-57-111Z.yml  page-2026-07-12T22-53-52-196Z.yml  page-2026-07-12T22-55-52-092Z.yml  page-2026-07-12T23-05-09-983Z.yml  page-2026-07-12T23-15-54-229Z.yml  page-2026-07-12T23-20-55-011Z.yml  (+1 more)
docs/: API.md  (+30 more)
(+239 files in other folders)
