[project]
name = "gptadmin"
version = "0.1.0"
description = "GPTAdmin - MCP server management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiogram>=3.0.0",
    "cryptography>=41.0.0",
    "paramiko>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gptadmin = "gptadmin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
